--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,25 @@ header{
 }
 
 .modal-container{
+    position:fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 101;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 80%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: rgba(255,255,255,0.7);
+    border-radius: 20px;
+    box-shadow: 20px 15px 20px 0px rgb(255 255 255 / 20%);
+    border-right: 1px solid rgba(255,255,255,0.2);
+    border-bottom: 1px solid rgba(255,255,255,0.2);
     display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .modal-container .modal-container-visible{
