--- a/css/styles.css
+++ b/css/styles.css
@@ -40,48 +40,24 @@ header{
 
 .modal-overlay{
     display: none;
-}
-
-@keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-}
-  
-@-moz-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-}
-  
-@-webkit-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-}
-  
-@-o-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-}
-  
-@-ms-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-}
-
-.modal-overlay .modal-overlay-visible{
     position: fixed;
     top: 0;
     left: 0;
     z-index: 100;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    animation: fadeIn 0.5s;
-    -moz-animation: fadeIn 0.5s;
-    -webkit-animation: fadeIn 0.5s;
-    -o-animation: fadeIn 0.5s;
+    background-color: rgba(0,0,0,0.8);
+}
+
+.modal-overlay.modal-overlay-visible{
+    display: block;
 }
 
 .modal-container{
+    display: none;
+}
+
+.modal-container.modal-container-visible{
     position:fixed;
     top: 50%;
     left: 50%;
@@ -97,20 +73,37 @@ header{
     box-shadow: 20px 15px 20px 0px rgb(255 255 255 / 20%);
     border-right: 1px solid rgba(255,255,255,0.2);
     border-bottom: 1px solid rgba(255,255,255,0.2);
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.modal-container .modal-container-visible{
-
+#modal-container-not-scrollable.modal-container{
+    color: red;
 }
 
-.modal-container .modal-container-not-scrollable{
-
+#modal-container-scrollable.modal-container{
+    color: blue;
 }
 
-.modal-container .modal-container-scrollable{
+.modal-container .modal-container-controls{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
 
+.modal-container .modal-container-controls .modal-container-close-button{
+    background-color: red;
+    opacity: 0.7;
+    color: white;
+    border-radius: 25px;
+    padding: 10px;
+    border: 0px;
+}
+
+.modal-container .modal-container-controls .modal-container-close-button:hover{
+    opacity: 1;
+    transform: translate3D(0,-1px,0) scale(1.03);
+    cursor: pointer;
 }
