--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,10 @@ header{
     display: block;
 }
 
+/* TBD */
 .modal-container{
     display: none;
+    overflow-y: auto;
 }
 
 .modal-container.modal-container-visible{
@@ -68,12 +70,12 @@ header{
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: rgba(255,255,255,0.7);
+    background: rgba(255,255,255,0.9);
     border-radius: 20px;
     box-shadow: 20px 15px 20px 0px rgb(255 255 255 / 20%);
     border-right: 1px solid rgba(255,255,255,0.2);
     border-bottom: 1px solid rgba(255,255,255,0.2);
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -84,13 +86,13 @@ header{
 }
 
 #modal-container-scrollable.modal-container{
-    color: blue;
+    color: green;
 }
 
 .modal-container .modal-container-controls{
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 40px;
+    top: 20px;
 }
 
 .modal-container .modal-container-controls .modal-container-close-button{
@@ -106,4 +108,11 @@ header{
     opacity: 1;
     transform: translate3D(0,-1px,0) scale(1.03);
     cursor: pointer;
+}
+
+#modal-container-not-scrollable.modal-container .modal-container-content,
+#modal-container-scrollable.modal-container .modal-container-content
+{
+    margin: 40px;
+    text-align: justify;
 }
