Little updates for preparing the right code for a Medium article

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,13 +53,8 @@ header{
     display: block;
 }
 
-/* TBD */
 .modal-container{
     display: none;
-    overflow-y: auto;
-}
-
-.modal-container.modal-container-visible{
     position:fixed;
     top: 50%;
     left: 50%;
@@ -67,7 +62,6 @@ header{
     transform: translate(-50%, -50%);
     width: 80%;
     height: 80%;
-    align-items: center;
     justify-content: center;
     text-align: center;
     background: rgba(255,255,255,0.9);
@@ -75,10 +69,12 @@ header{
     box-shadow: 20px 15px 20px 0px rgb(255 255 255 / 20%);
     border-right: 1px solid rgba(255,255,255,0.2);
     border-bottom: 1px solid rgba(255,255,255,0.2);
+    /* Let's add the overflow-y property */
+    overflow-y: auto;
+}
+
+.modal-container.modal-container-visible{
     display: block;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 #modal-container-not-scrollable.modal-container{
@@ -115,4 +111,36 @@ header{
 {
     margin: 40px;
     text-align: justify;
+}
+
+#modal-container-scrollable.modal-container .modal-container-content .modal-container-content-no-scroll{
+    margin: 30px;
+}
+
+#modal-container-scrollable.modal-container .modal-container-content .modal-container-content-scroll{
+    position: absolute;
+    width: auto;
+    height: calc(100% - 140px);
+    overflow-y: auto;
+    margin: 10px 30px 30px 30px;
+    padding: 0px 20px 0px 0px;
+}
+
+#modal-container-scrollable.modal-container .modal-container-content .modal-container-content-scroll::-webkit-scrollbar {
+    width: 10px;
+}
+
+#modal-container-scrollable.modal-container .modal-container-content .modal-container-content-scroll::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px #333; 
+    border-radius: 10px;
+}
+    
+#modal-container-scrollable.modal-container .modal-container-content .modal-container-content-scroll::-webkit-scrollbar-thumb {
+    background: rgba(51,51,51,0.8);
+    opacity: 0.6;
+    border-radius: 10px;
+}
+
+#modal-container-scrollable.modal-container .modal-container-content .modal-container-content-scroll::-webkit-scrollbar-thumb:hover {
+    background: rgba(51,51,51,1);
 }
